version 0.4-5 (07-05-2014):

- fixing memory access issues, discovered by valgrind and AddressSanitizer

version 0.4-4 (04-12-2013):

- fixing a bug for solaris

version 0.4-3 (09-1-2012):

- included a citation to the JSS article about RSNNS in the documentation and the CITATION file
- recompressed example data to fix a warning in CRAN checks
- fixed the jordan and elman examples: "decay=0.1" was given as parameter, instead of the correct "learnFuncParams=c(0.1)" 
- added an example for training an MLP for the iris data, using the low-level api (mlp_irisSnnsR.R)
- fixed the decodeClassLables() function, which didn't correctly translate factor level names to column names  

version 0.4-2 (29-9-2011):

- removed original SNNS manual, to avoid license confusions, as it states an outdated license

version 0.4-1 (28-7-2011):

- fixed a bug that prevented savePatFile to work
- fixed a bug that prevented compilation on Mac OSX
- fixed the "variable set but not used" warnings that occur in the most recent gcc versions

version 0.4-0 (21-6-2011):

- The art2 demo was fixed
- changed package encoding to UTF-8
- wrapping of some of the missing functions was added
- artmap was added in the high-level interface
- initialization to zero was added for all former static variables 
  (this was not always performed before, but it turned out that some
  SNNS functions rely on this and crash otherwise, e.g. dlvq and artmap)
- segfaults related to Rcpp wrapping of (const char*) NULL were fixed
- an object serializaton mechanism was implemented that now allows for rsnns
  objects being saved and loaded through R's normal save/load mechanism
- new normalization functions were added that allow for denormalization,
  and norm of the test set with the parameters obtained on the training set
- some new high-level functions were implemented to extract internals of 
  the neural networks (getWeights, getUnitDefinitions)