@@ -7,7 +7,7 @@ setSnnsRSeedValue(seed)
 data(iris)
 
 #shuffle the vector
-iris <- iris[sample(1:nrow(iris),length(1:nrow(iris))),1:ncol(iris)]
+iris <- iris[sample(nrow(iris)),]
 
 irisValues <- iris[,1:4]
 #irisTargets <- decodeClassLabels(iris[,5])
